<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorite_border_24_blue"
            android:title="@string/menu_favorites" />

    </group>
    <item android:title="@string/help_and_feedback">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/menu_about_us" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_baseline_email_24"
                android:onClick="sendEmailOnClick"
                android:title="@string/menu_contact" />
        </menu>
    </item>
</menu>