<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mihneacristian.traveljournal.Fragments.AboutUsssFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.mihneacristian.traveljournal.Fragments.AboutUsssFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.mihneacristian.traveljournal.ui.gallery.GalleryFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.mihneacristian.traveljournal.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_slideshow" />
</navigation>