<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.EditTripActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/light_blue">

        <ImageView
            android:id="@+id/goToPreviousMenuImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"></ImageView>

        <Button
            android:id="@+id/updateTripButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:onClick="updateTripOnClick"
            android:text="@string/update_trip"
            android:textColor="@android:color/white"></Button>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/updateTripCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/updateTripNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/tripName"></EditText>

                <EditText
                    android:id="@+id/updateDestinationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/destination"></EditText>

                <RadioGroup
                    android:id="@+id/updateTripTypeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <RadioButton
                        android:id="@+id/updateRadioButtonCityBreak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/light_blue"
                        android:text="@string/city_break"></RadioButton>

                    <RadioButton
                        android:id="@+id/updateRadioButtonSeaSide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/light_blue"
                        android:text="@string/sea_side"></RadioButton>

                    <RadioButton
                        android:id="@+id/updateRadioButtonMountain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/light_blue"
                        android:text="@string/mountains"></RadioButton>

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/updatePriceEUR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_eur"></TextView>

                    <TextView
                        android:id="@+id/updateShowPriceEUR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/updatePriceSeekBar"
                        style="@style/MySeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:max="5000"
                        android:progress="100"
                        android:thumb="@drawable/ic_baseline_adjust_24"></SeekBar>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/updateStartDateButton"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@color/light_blue"
                        android:onClick="onClickPickStartDate"
                        android:text="@string/start_date"
                        android:textColor="@android:color/white"></Button>

                    <Button
                        android:id="@+id/updateEndDateButton"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@color/light_blue"
                        android:onClick="onClickPickEndDate"
                        android:text="@string/end_date"
                        android:textColor="@android:color/white"></Button>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/updateStartDateTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"></TextView>

                    <TextView
                        android:id="@+id/updateEndDateTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:gravity="center"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/updateRatingBarTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:numStars="5"
                        android:stepSize="0.5"
                        android:theme="@style/RatingBar"></RatingBar>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/updateUploadedPhotoImageView"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_baseline_photo_24"></de.hdodenhof.circleimageview.CircleImageView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/updateOpenGalleryImageView"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_photo_library_24"></ImageView>

                <ImageView
                    android:id="@+id/updateOpenCameraImageView"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_menu_camera"></ImageView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>


